gogs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
