gogs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gogs
spec:
  rules:
    - host: gogs.example.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gogs
                port:
                  name: http
